Add GET Top 10 frequency words API
